refactor: migrate config files to Exll's configlib