@@ -20,11 +20,12 @@
 package net.william278.huskchat.command;
 
 import net.william278.huskchat.HuskChat;
+import net.william278.huskchat.channel.Channel;
 import net.william278.huskchat.user.ConsoleUser;
 import net.william278.huskchat.user.OnlineUser;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Unmodifiable;
 
-import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -32,7 +33,7 @@ import java.util.stream.Collectors;
 public class ChannelCommand extends CommandBase {
 
     public ChannelCommand(@NotNull HuskChat plugin) {
-        super(plugin.getSettings().getChannelCommandAliases(), "<channel>", plugin);
+        super(plugin.getChannels().getChannelCommandAliases(), "<channel>", plugin);
     }
 
     @Override
@@ -43,7 +44,7 @@ public class ChannelCommand extends CommandBase {
         }
         if (player.hasPermission(getPermission())) {
             if (args.length == 1) {
-                plugin.getPlayerCache().switchPlayerChannel(player, args[0]);
+                plugin.getUserCache().switchPlayerChannel(player, args[0], plugin);
             } else {
                 plugin.getLocales().sendMessage(player, "error_invalid_syntax", getUsage());
             }
@@ -58,22 +59,20 @@ public class ChannelCommand extends CommandBase {
             return List.of();
         }
         if (args.length <= 1) {
-            return getChannelIdsWithSendPermission(player).stream().filter(val ->
-                            val.toLowerCase().startsWith((args.length >= 1) ? args[0].toLowerCase() : ""))
-                    .sorted().collect(Collectors.toList());
+            return getUsableChannels(player).stream()
+                    .filter(val -> val.toLowerCase().startsWith((args.length == 1) ? args[0].toLowerCase() : ""))
+                    .sorted().toList();
         }
         return List.of();
     }
 
     @NotNull
-    public Set<String> getChannelIdsWithSendPermission(OnlineUser player) {
-        final Set<String> channelsWithPermission = new HashSet<>();
-        plugin.getSettings().getChannels().forEach((id, channel) -> {
-            if (channel.getSendPermission() == null || player.hasPermission(channel.getSendPermission())) {
-                channelsWithPermission.add(channel.getId());
-            }
-        });
-        return channelsWithPermission;
+    @Unmodifiable
+    public Set<String> getUsableChannels(@NotNull OnlineUser player) {
+        return plugin.getChannels().getChannels().stream()
+                .filter(c -> c.getPermissions().getSend().map(player::hasPermission).orElse(true))
+                .map(Channel::getId)
+                .collect(Collectors.toSet());
     }
 
 }
